[tool.poetry]
name = "home-scanner"
version = "0.1.0"
description = "Customised suggestions for finding apartments using web scraping"
authors = ["Giorgos Kallis <giorgos.kallis.gr@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
black = "^24.8.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
